crates/harness-run/src/workflow/tests/snapshots/harness_run__workflow__tests__phase_transitions__snapshot_initial_state.snap
---
source: crates/harness-run/src/workflow/tests/phase_transitions.rs
assertion_line: 292
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "last_event": "RunInitialized",
  "state": {
    "phase": "bootstrap",
    "preflight": {
      "status": "pending"
    }
  },
  "transition_count": 0,
  "updated_at": "2026-01-01T00:00:00Z"
}
