crates/harness-run/src/workflow/tests/snapshots/harness_run__workflow__tests__phase_transitions__snapshot_state_after_cluster_prepared.snap
---
source: crates/harness-run/src/workflow/tests/phase_transitions.rs
assertion_line: 312
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "last_event": "ClusterPrepared",
  "state": {
    "history": [
      {
        "event": "cluster-prepared",
        "from": "bootstrap",
        "timestamp": "REDACTED",
        "to": "preflight"
      }
    ],
    "phase": "preflight",
    "preflight": {
      "status": "pending"
    },
    "updated_at": "REDACTED"
  },
  "transition_count": 1,
  "updated_at": "REDACTED"
}
